bug fix C2SIM Order

--- a/VR-Forces/remoteControlDIS.vcxproj
+++ b/VR-Forces/remoteControlDIS.vcxproj
@@ -22,7 +22,7 @@
     <ProjectGUID>{D77B5549-C9F3-458C-94A1-21CDE4F11D39}</ProjectGUID>
     <Keyword>Win32Proj</Keyword>
     <Platform>x64</Platform>
-    <ProjectName>remoteControlTriangle</ProjectName>
+    <ProjectName>c2simVRF</ProjectName>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)/Microsoft.Cpp.Default.props" />
@@ -36,7 +36,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseOfMfc>false</UseOfMfc>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -59,25 +59,25 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
     <_ProjectFileVersion>10.0.20506.1</_ProjectFileVersion>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\..\examples\remoteControlTriangle\build64\Debug\</OutDir>
-    <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\remoteControlDIS.dir\Debug</IntDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\..\examples\c2simVRF\build64\Debug\</OutDir>
+    <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\remoteControlDIS.dir\Debug\</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">c2simInterface</TargetName>
     <TargetExt Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.exe</TargetExt>
     <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</LinkIncremental>
     <GenerateManifest Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</GenerateManifest>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\..\examples\remoteControlTriangle\build64\Release\</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\..\examples\c2simVRF\build64\Release\</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|x64'">remoteControlDIS.dir/Release/</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|x64'">remoteControlDIS</TargetName>
     <TargetExt Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.exe</TargetExt>
     <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</LinkIncremental>
     <GenerateManifest Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</GenerateManifest>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">..\..\examples\remoteControlTriangle\build64\MinSizeRel\</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">..\..\examples\c2simVRF\build64\MinSizeRel\</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">remoteControlDIS.dir/MinSizeRel/</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">remoteControlDIS</TargetName>
     <TargetExt Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">.exe</TargetExt>
     <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">false</LinkIncremental>
     <GenerateManifest Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">true</GenerateManifest>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">..\..\examples\remoteControlTriangle\build64\RelWithDebInfo\</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">..\..\examples\c2simVRF\build64\RelWithDebInfo\</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">remoteControlDIS.dir/RelWithDebInfo/</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">remoteControlDIS</TargetName>
     <TargetExt Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">.exe</TargetExt>
@@ -85,13 +85,17 @@
     <GenerateManifest Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">true</GenerateManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\MAK\vrforces4.4.2\examples\remoteControlTriangle\xercesc\bin\xerces-c_3_1D.dll;C:\MAK\vrforces4.4.2\examples\remoteControlTriangle\xercesc\bin;C:\MAK\vrforces4.4.2\examples\remoteControlTriangle\xercesc;C:\Users\c2sim\Documents\VR-Forces\Source Code\vrlj\com\mak\vrlj\object;C:\Users\c2sim\Documents\VR-Forces\Source Code;C:\Users\c2sim\workspace\VR-Link Program\lib;C:\Users\c2sim\workspace\VR-Link Program\lib\BML_Clients;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\MAK\vrforces4.4.2\examples\remoteControlTriangle\xercesc\bin;C:\MAK\vrforces4.4.2\examples\remoteControlTriangle\cpprest\x64;C:\Users\c2sim\workspace\VR-Link Program\lib\BML_Clients;C:\Users\c2sim\workspace\VR-Link Program\lib;C:\Users\c2sim\Documents\VR-Forces\Source Code;C:\Users\c2sim\Documents\VR-Forces\Source Code\vrlj\com\mak\vrlj\object;$(LibraryPath)</LibraryPath>
-    <ExecutablePath>C:\MAK\vrforces4.4.2\examples\remoteControlTriangle\xercesc\bin;$(ExecutablePath)</ExecutablePath>
+    <IncludePath>C:\MAK\vrforces4.4.2\examples\c2simVRF\xercesc\bin\xerces-c_3_1D.dll;C:\MAK\vrforces4.4.2\examples\c2simVRF\xercesc\bin;C:\MAK\vrforces4.4.2\examples\c2simVRF\xercesc;C:\Users\c2sim\Documents\VR-Forces\Source Code\vrlj\com\mak\vrlj\object;C:\Users\c2sim\Documents\VR-Forces\Source Code;C:\Users\c2sim\workspace\VR-Link Program\lib;C:\Users\c2sim\workspace\VR-Link Program\lib\BML_Clients;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\MAK\vrforces4.4.2\examples\c2simVRF\xercesc\bin;C:\MAK\vrforces4.4.2\examples\c2simVRF\cpprest\x64;C:\Users\c2sim\workspace\VR-Link Program\lib\BML_Clients;C:\Users\c2sim\workspace\VR-Link Program\lib;C:\Users\c2sim\Documents\VR-Forces\Source Code;C:\Users\c2sim\Documents\VR-Forces\Source Code\vrlj\com\mak\vrlj\object;$(LibraryPath)</LibraryPath>
+    <ExecutablePath>C:\MAK\vrforces4.4.2\examples\c2simVRF\xercesc\bin;$(ExecutablePath)</ExecutablePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <LibraryPath>C:\MAK\vrforces4.4.2\examples\c2simVRF\xercesc\bin;C:\MAK\vrforces4.4.2\examples\c2simVRF\cpprest\x64;$(LibraryPath)</LibraryPath>
+    <ExecutablePath>C:\MAK\vrforces4.4.2\examples\c2simVRF\xercesc\bin;$(ExecutablePath)</ExecutablePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>C:\MAK\vrforces4.4.2\examples\remoteControlTriangle\xercesc\include\xercesc;C:\Users\c2sim\workspace\VR-Link Program\lib\BML_Clients;../../include;$(MAK_VRLDIR)/include;$(MAK_RTIDIR)/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\MAK\vrforces4.4.2\c2simVRF\xercesc\include\xercesc;C:\Users\c2sim\workspace\VR-Link Program\lib\BML_Clients;../../include;$(MAK_VRLDIR)/include;$(MAK_RTIDIR)/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AssemblerListingLocation>Debug/</AssemblerListingLocation>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <CompileAs>CompileAsCpp</CompileAs>
@@ -144,13 +148,13 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     </PostBuildEvent>
     <Link>
       <AdditionalOptions> /machine:x64 /debug %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>C:\MAK\vrforces4.4.2\examples\remoteControlTriangle\xercesc\lib\xerces-c_3.lib;C:\MAK\vrforces4.4.2\examples\remoteControlTriangle\xercesc\lib\xerces-c_static_3.lib;C:\MAK\vrforces4.4.2\examples\remoteControlTriangle\cpprest\x64\Debug\cpprest140d_2_9.lib;C:\MAK\vrforces4.4.2\examples\remoteControlTriangle\xercesc\lib\xerces-c_3D.lib;C:\MAK\vrforces4.4.2\examples\remoteControlTriangle\xercesc\lib\xerces-c_static_3D.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;vrfmsgsd.lib;vrfutild.lib;vrftasksd.lib;vrfcontrolDISd.lib;vrfpland.lib;vlutild.lib;matrixd.lib;mtld.lib;vlDISd.lib;vld.lib;vrfExtProtocold.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\c2sim\workspace\VR-Link Program\lib\BML_Clients;C:\MAK\vrforces4.4.2\examples\remoteControlTriangle\cpprest\x64\Debug;../../lib64;../../lib64/$(Configuration);$(MAK_VRLDIR)/lib64;C:\MAK\vrforces4.4.2\examples\remoteControlTriangle\cpprest\x64;$(MAK_VRLDIR)/lib64/$(Configuration);/lib;/lib/$(Configuration);/lib64;/lib64/$(Configuration);../../lib;../../lib/$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>C:\MAK\vrforces4.4.2\examples\c2simVRF\xercesc\lib\xerces-c_3.lib;C:\MAK\vrforces4.4.2\examples\c2simVRF\xercesc\lib\xerces-c_static_3.lib;C:\MAK\vrforces4.4.2\examples\c2simVRF\cpprest\x64\Debug\cpprest140d_2_9.lib;C:\MAK\vrforces4.4.2\examples\c2simVRF\xercesc\lib\xerces-c_3D.lib;C:\MAK\vrforces4.4.2\examples\c2simVRF\xercesc\lib\xerces-c_static_3D.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;vrfmsgsd.lib;vrfutild.lib;vrftasksd.lib;vrfcontrolDISd.lib;vrfpland.lib;vlutild.lib;matrixd.lib;mtld.lib;vlDISd.lib;vld.lib;vrfExtProtocold.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\c2sim\workspace\VR-Link Program\lib\BML_Clients;C:\MAK\vrforces4.4.2\examples\c2simVRF\cpprest\x64\Debug;../../lib64;../../lib64/$(Configuration);$(MAK_VRLDIR)/lib64;C:\MAK\vrforces4.4.2\examples\c2simVRF\cpprest\x64;$(MAK_VRLDIR)/lib64/$(Configuration);/lib;/lib/$(Configuration);/lib64;/lib64/$(Configuration);../../lib;../../lib/$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>msvcrt.lib;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
-      <ImportLibrary>../../examples/remoteControlTriangle/build64/Debug/remoteControlDISd.lib</ImportLibrary>
+      <ImportLibrary>../../examples/c2simVRF/build64/Debug/remoteControlDISd.lib</ImportLibrary>
       <LargeAddressAware>true</LargeAddressAware>
-      <ProgramDataBaseFile>../../examples/remoteControlTriangle/build64/Debug/remoteControlDISd.pdb</ProgramDataBaseFile>
+      <ProgramDataBaseFile>../../examples/c2simVRF/build64/Debug/remoteControlDISd.pdb</ProgramDataBaseFile>
       <SubSystem>Console</SubSystem>
       <Version>
       </Version>
@@ -217,19 +221,19 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     </PostBuildEvent>
     <Link>
       <AdditionalOptions> /machine:x64 %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;vrfcontrolDIS.lib;vlutil.lib;matrix.lib;mtl.lib;vlDIS.lib;vl.lib;vrfExtProtocol.lib;vrfmsgs.lib;vrfplan.lib;vrftasks.lib;vrfutil.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>../../lib64;../../lib64/$(Configuration);$(MAK_VRLDIR)/lib64;$(MAK_VRLDIR)/lib64/$(Configuration);/lib;/lib/$(Configuration);/lib64;/lib64/$(Configuration);../../lib;../../lib/$(Configuration);/lib64;/lib64/$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>C:\MAK\vrforces4.4.2\examples\c2simVRF\xercesc\lib\xerces-c_3.lib;C:\MAK\vrforces4.4.2\examples\c2simVRF\xercesc\lib\xerces-c_static_3.lib;C:\MAK\vrforces4.4.2\examples\c2simVRF\cpprest\x64\Release\cpprest140_2_9.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;vrfcontrolDIS.lib;vlutil.lib;matrix.lib;mtl.lib;vlDIS.lib;vl.lib;vrfExtProtocol.lib;vrfmsgs.lib;vrfplan.lib;vrftasks.lib;vrfutil.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\MAK\vrforces4.4.2\examples\c2simVRF\xercesc\lib;C:\MAK\vrforces4.4.2\examples\c2simVRF\xercesc\bin;../../lib64;../../lib64/$(Configuration);$(MAK_VRLDIR)/lib64;$(MAK_VRLDIR)/lib64/$(Configuration);/lib;/lib/$(Configuration);/lib64;/lib64/$(Configuration);../../lib;../../lib/$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
-      <ImportLibrary>../../examples/remoteControlTriangle/build64/Release/remoteControlDIS.lib</ImportLibrary>
+      <ImportLibrary>../../examples/c2simVRF/build64/Release/remoteControlDIS.lib</ImportLibrary>
       <LargeAddressAware>true</LargeAddressAware>
-      <ProgramDataBaseFile>../../examples/remoteControlTriangle/build64/Release/remoteControlDIS.pdb</ProgramDataBaseFile>
+      <ProgramDataBaseFile>../../examples/c2simVRF/build64/Release/remoteControlDIS.pdb</ProgramDataBaseFile>
       <SubSystem>Console</SubSystem>
       <Version>
       </Version>
     </Link>
     <ProjectReference>
-      <LinkLibraryDependencies>false</LinkLibraryDependencies>
+      <LinkLibraryDependencies>true</LinkLibraryDependencies>
     </ProjectReference>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">
@@ -291,9 +295,9 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <AdditionalLibraryDirectories>../../lib64;../../lib64/$(Configuration);$(MAK_VRLDIR)/lib64;$(MAK_VRLDIR)/lib64/$(Configuration);/lib;/lib/$(Configuration);/lib64;/lib64/$(Configuration);../../lib;../../lib/$(Configuration);/lib64;/lib64/$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
-      <ImportLibrary>../../examples/remoteControlTriangle/build64/MinSizeRel/remoteControlDIS.lib</ImportLibrary>
+      <ImportLibrary>../../examples/c2simVRF/build64/MinSizeRel/remoteControlDIS.lib</ImportLibrary>
       <LargeAddressAware>true</LargeAddressAware>
-      <ProgramDataBaseFile>../../examples/remoteControlTriangle/build64/MinSizeRel/remoteControlDIS.pdb</ProgramDataBaseFile>
+      <ProgramDataBaseFile>../../examples/c2simVRF/build64/MinSizeRel/remoteControlDIS.pdb</ProgramDataBaseFile>
       <SubSystem>Console</SubSystem>
       <Version>
       </Version>
@@ -360,9 +364,9 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <AdditionalLibraryDirectories>../../lib64;../../lib64/$(Configuration);$(MAK_VRLDIR)/lib64;$(MAK_VRLDIR)/lib64/$(Configuration);/lib;/lib/$(Configuration);/lib64;/lib64/$(Configuration);../../lib;../../lib/$(Configuration);/lib64;/lib64/$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
-      <ImportLibrary>../../examples/remoteControlTriangle/build64/RelWithDebInfo/remoteControlDIS.lib</ImportLibrary>
+      <ImportLibrary>../../examples/c2simVRF/build64/RelWithDebInfo/remoteControlDIS.lib</ImportLibrary>
       <LargeAddressAware>true</LargeAddressAware>
-      <ProgramDataBaseFile>../../examples/remoteControlTriangle/build64/RelWithDebInfo/remoteControlDIS.pdb</ProgramDataBaseFile>
+      <ProgramDataBaseFile>../../examples/c2simVRF/build64/RelWithDebInfo/remoteControlDIS.pdb</ProgramDataBaseFile>
       <SubSystem>Console</SubSystem>
       <Version>
       </Version>
@@ -372,7 +376,7 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     </ProjectReference>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="C2SIMHandler.cpp" />
+    <ClCompile Include="C2SIMOrderHandler.cpp" />
     <ClCompile Include="RestClient.cpp" />
     <ClCompile Include="StompClient.cpp" />
     <ClCompile Include="xerces_utils.cpp" />
@@ -380,7 +384,7 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     <ClInclude Include="C2SIMinterface.h" />
     <ClInclude Include="RestClient.h" />
     <ClInclude Include="remoteControlInit.h" />
-    <ClInclude Include="C2SIMHandler.h" />
+    <ClInclude Include="C2SIMOrderHandler.h" />
     <ClInclude Include="StompClient.h" />
     <ClInclude Include="textIf.h" />
     <ClCompile Include="C2SIMinterface.cpp" />
